@@ -555,6 +555,7 @@
 		5054620410616B0700AB7C52 /* ZFont.h in Headers */ = {isa = PBXBuildFile; fileRef = 505461FC10616B0700AB7C52 /* ZFont.h */; };
 		5054620510616B0700AB7C52 /* ZFont.m in Sources */ = {isa = PBXBuildFile; fileRef = 505461FD10616B0700AB7C52 /* ZFont.m */; };
 		5054620810616B3400AB7C52 /* libFontLabel.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 505461DF10616AE100AB7C52 /* libFontLabel.a */; };
+		505462FC1062768000AB7C52 /* ccConfig.h in Headers */ = {isa = PBXBuildFile; fileRef = 505462FB1062768000AB7C52 /* ccConfig.h */; };
 		5057B1C80F6E85790019C38F /* grossini_dance_atlas.png in Resources */ = {isa = PBXBuildFile; fileRef = 509A7A970F61A2400032F449 /* grossini_dance_atlas.png */; };
 		505B62AF0F2E6A0F001B4104 /* r1.png in Resources */ = {isa = PBXBuildFile; fileRef = 500165990E72DB0E0085673F /* r1.png */; };
 		505B62B00F2E6A0F001B4104 /* r2.png in Resources */ = {isa = PBXBuildFile; fileRef = 5001659A0E72DB0E0085673F /* r2.png */; };
@@ -1946,6 +1947,7 @@
 		505461FB10616B0700AB7C52 /* FontManager.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = FontManager.m; sourceTree = "<group>"; };
 		505461FC10616B0700AB7C52 /* ZFont.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = ZFont.h; sourceTree = "<group>"; };
 		505461FD10616B0700AB7C52 /* ZFont.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = ZFont.m; sourceTree = "<group>"; };
+		505462FB1062768000AB7C52 /* ccConfig.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = ccConfig.h; sourceTree = "<group>"; };
 		505B62D60F2E6A0F001B4104 /* Texture2dTest.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = Texture2dTest.app; sourceTree = BUILT_PRODUCTS_DIR; };
 		505B62DE0F2E6A66001B4104 /* Texture2dTest.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = Texture2dTest.h; path = tests/Texture2dTest.h; sourceTree = "<group>"; };
 		505B62DF0F2E6A66001B4104 /* Texture2dTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = Texture2dTest.m; path = tests/Texture2dTest.m; sourceTree = "<group>"; };
@@ -3302,23 +3304,24 @@
 				501CCFA30E99657C00B86F68 /* Support */,
 				50305AF30E40E33200F63373 /* cocos2d.h */,
 				50A07B7A0E4CBCD300AAF0BB /* cocos2d.m */,
-				50637A150E95397A000C9182 /* TextureAtlas.h */,
-				50637A160E95397A000C9182 /* TextureAtlas.m */,
-				5066020F0E38A70D000B500E /* Scheduler.h */,
-				506602100E38A70D000B500E /* Scheduler.m */,
-				50B2CCC20E119B8E00AE9530 /* DrawingPrimitives.h */,
-				50B2CCC30E119B8E00AE9530 /* DrawingPrimitives.m */,
-				509E665C0E06CD940050992C /* Camera.h */,
-				509E665D0E06CD940050992C /* Camera.m */,
-				50316AA410291280003ACFE7 /* RenderTexture.h */,
-				50316AA510291280003ACFE7 /* RenderTexture.m */,
-				5018F2560DFDEAFF00C013A5 /* Director.h */,
-				5018F2570DFDEAFF00C013A5 /* Director.m */,
-				5018F2670DFDEAFF00C013A5 /* TextureMgr.h */,
-				5018F2680DFDEAFF00C013A5 /* TextureMgr.m */,
-				50F9E8160E1AA34E000E7616 /* ccTypes.h */,
+				505462FB1062768000AB7C52 /* ccConfig.h */,
 				50BAF3970F33CCD8003F654C /* ccMacros.h */,
 				50851BF40F35FB0F00978029 /* ccExceptions.h */,
+				50F9E8160E1AA34E000E7616 /* ccTypes.h */,
+				509E665C0E06CD940050992C /* Camera.h */,
+				509E665D0E06CD940050992C /* Camera.m */,
+				5018F2560DFDEAFF00C013A5 /* Director.h */,
+				5018F2570DFDEAFF00C013A5 /* Director.m */,
+				50B2CCC20E119B8E00AE9530 /* DrawingPrimitives.h */,
+				50B2CCC30E119B8E00AE9530 /* DrawingPrimitives.m */,
+				50316AA410291280003ACFE7 /* RenderTexture.h */,
+				50316AA510291280003ACFE7 /* RenderTexture.m */,
+				5066020F0E38A70D000B500E /* Scheduler.h */,
+				506602100E38A70D000B500E /* Scheduler.m */,
+				50637A150E95397A000C9182 /* TextureAtlas.h */,
+				50637A160E95397A000C9182 /* TextureAtlas.m */,
+				5018F2670DFDEAFF00C013A5 /* TextureMgr.h */,
+				5018F2680DFDEAFF00C013A5 /* TextureMgr.m */,
 			);
 			path = cocos2d;
 			sourceTree = "<group>";
@@ -4386,6 +4389,7 @@
 				50316AD81029A137003ACFE7 /* Ribbon.h in Headers */,
 				50545BFF105E8D6C00AB7C52 /* PageTurn3DAction.h in Headers */,
 				50545C0A105E8E7200AB7C52 /* PageTurnTransition.h in Headers */,
+				505462FC1062768000AB7C52 /* ccConfig.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
